add repository to package.json

--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "maps"
   ],
   "author": "leomunozr",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/leomunozr/nfz-mx.git"
+  }
 }
